--- a/ICFES_PROJECT/src/interfaz/frFiltro.form
+++ b/ICFES_PROJECT/src/interfaz/frFiltro.form
@@ -49,6 +49,11 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JPanel" name="pnFiltro">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="cc" red="0" type="rgb"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -65,6 +70,9 @@
     </Container>
     <Component class="javax.swing.JButton" name="btEnviar">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="cc" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Enviar"/>
       </Properties>
       <Events>
